macro-template/tests/ui/row_arity_mismatch.stderr
error: this row provides 1 replacement value
 --> tests/ui/row_arity_mismatch.rs:6:14
  |
6 |             (u8),
  |              ^^

error: placeholders `(Ty, Max)` require 2 replacement values
 --> tests/ui/row_arity_mismatch.rs:5:14
  |
5 |         for (Ty, Max) in [
  |              ^^^^^^^
